--- a/list_stock_products.ipynb
+++ b/list_stock_products.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "after-access",
+   "id": "fifth-armstrong",
    "metadata": {},
    "source": [
     "# Steps:"
@@ -11,17 +11,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fuzzy-fantasy",
+   "id": "quick-syndicate",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Implementations:\n",
-    "#Functions that takes store_id(s) and product_id, color_id and returns stock availability"
+    "# Implementations:\n",
+    "# Function that takes store_id(s) and product_id, color_id and returns stock availability"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "universal-melbourne",
+   "id": "elect-drill",
    "metadata": {},
    "source": [
     "### Step by Step"
@@ -37,86 +37,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "framed-commodity",
+   "execution_count": 66,
+   "id": "neutral-photographer",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'list_stores'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-2f20aae3d91b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlist_stores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mipynb\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msearch_stores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'list_stores'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import requests\n"
+    "import requests\n",
+    "import sys\n",
+    "from functions import *"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "modern-blackjack",
+   "cell_type": "markdown",
+   "id": "downtown-paper",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'search_stores' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-8aeac5eaf238>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msearch_stores\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m40.416050951604056\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m3.7072654155715603\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'search_stores' is not defined"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "turned-faith",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "3º Id´s product, id store and url (api to find the stock)."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "bearing-nirvana",
+   "id": "suitable-arena",
    "metadata": {},
    "outputs": [],
    "source": [
     "product= 3427741\n",
-    "color = 320"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "proof-pulse",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "color = 320\n",
+    "\n",
     "store = {\n",
     "    \"physicalStoreId\":65\n",
-    "}"
+    "}\n",
+    "\n",
+    "stock = \"https://itxrest.inditex.com/LOMOServiciosRESTCommerce-ws/common/1/stock/campaign/V2021/product/part-number/{}\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "textile-cholesterol",
+   "cell_type": "markdown",
+   "id": "curious-print",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "stock = \"https://itxrest.inditex.com/LOMOServiciosRESTCommerce-ws/common/1/stock/campaign/V2021/product/part-number/{}\"\n",
-    "#product=\"cazadora amarilla\""
+    "4º Test with one product."
    ]
   },
   {
@@ -124,7 +85,7 @@
    "execution_count": 67,
    "id": "imported-clarity",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -153,33 +114,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "color-memory",
+   "metadata": {},
+   "source": [
+    "5º Create a dictionary to normalize de size  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "breathing-oklahoma",
+   "execution_count": 9,
+   "id": "superior-definition",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "size_ = {101:\"XS\", 102:\"S\", 103:\"M\", 104:\"L\", 105:\"XL\", 106:\"XXL\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "federal-blair",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 12\n",
+    "\n",
+    "if s in size_:\n",
+    "    s = size_[s]\n",
+    "    print(s)\n",
+    "else: \n",
+    "    print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "adverse-offering",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_products' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-423993273a5a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import the funtion that recive a search name and return id_product and id_color.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdriver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mChrome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./chromedriver\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mget_products\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"blusa amarilla\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdriver\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_products' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the funtion that recive a search name and return id_product and id_color.\n",
+    "driver = webdriver.Chrome(\"./chromedriver\")\n",
+    "get_products(\"blusa amarilla\",driver)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "steady-stewart",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "decreased-mistress",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "narrative-decision",
+   "id": "terminal-testament",
    "metadata": {},
    "outputs": [],
    "source": []
