--- a/list_stores.ipynb
+++ b/list_stores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "opening-coalition",
+   "id": "comparative-interaction",
    "metadata": {},
    "source": [
     "# Steps:"
@@ -10,18 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 360,
    "id": "facial-prairie",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Implementations:\n",
-    "# Functions that receives lat, lng and returns store_ids"
+    "# Function1 that receives lat, lng and returns store_ids\n",
+    "# Function2 that receives lat, lng and returns store_ids,latitud,longitude,adress,day[opentime,closetime]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "pediatric-jackson",
+   "id": "elder-prison",
    "metadata": {},
    "source": [
     "### Step by Step"
@@ -38,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "extreme-coast",
+   "id": "photographic-counter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "endless-stroke",
+   "id": "honest-apparatus",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -56,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fiscal-harvard",
+   "id": "mighty-clause",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -64,23 +65,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "addressed-india",
+   "id": "tamil-unknown",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "latin-contemporary",
+   "id": "forty-interim",
    "metadata": {},
    "source": [
-    "### Primera función que seca cada uno de los id de stores "
+    "1º Function that receives lat, lng and returns store_ids."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "academic-austria",
+   "id": "arabic-tourism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "inside-bulletin",
+   "id": "dental-accordance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "changed-phone",
+   "id": "described-trailer",
    "metadata": {},
    "outputs": [
     {
@@ -141,10 +142,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "strategic-contrast",
+   "id": "nearby-assumption",
    "metadata": {},
    "source": [
-    "### Segunda función que sace:\n",
+    "###  2º:\n",
     "    - id\n",
     "    - latitud\n",
     "    - longitud\n",
@@ -156,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "threaded-rating",
+   "id": "bored-morocco",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,8 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
-   "id": "documented-hungary",
+   "execution_count": 367,
+   "id": "solar-virgin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +208,7 @@
     "\n",
     "                day_hour[day]=[open_,close]\n",
     "\n",
-    "            except:   \n",
+    "            except:\n",
     "                pass\n",
     "\n",
     "        dir_store = {\"id\": id_,\"latitude\":latitud ,\"longitude\": longitude, \"adress\":adress, \"days\": day_hour}\n",
@@ -218,8 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
-   "id": "induced-policy",
+   "execution_count": 368,
+   "id": "decreased-trick",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +583,7 @@
        "   'V': ['10:00', '22:00']}}]"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "south-mobile",
+   "id": "declared-tribute",
    "metadata": {},
    "outputs": [],
    "source": []
