--- a/jypyters_notebooks/list_features_and_ids_products.ipynb
+++ b/jypyters_notebooks/list_features_and_ids_products.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "id": "seasonal-statistics",
    "metadata": {},
    "outputs": [],
@@ -39,13 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "id": "becoming-mistake",
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "from time import sleep"
+    "from time import sleep\n",
+    "import os"
    ]
   },
   {
@@ -58,12 +59,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "id": "resistant-witness",
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = webdriver.Chrome(\"./chromedriver\")"
+    "#options = webdriver.ChromeOptions()\n",
+    "#options.add_argument(\"headless\")\n",
+    "#driver = webdriver.Chrome(executable_path=\"../chromedriver\", chrome_options = options)\n",
+    "driver = webdriver.Chrome(\"../chromedriver\")"
    ]
   },
   {
@@ -76,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 68,
    "id": "explicit-franklin",
    "metadata": {},
    "outputs": [],
@@ -86,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 69,
    "id": "clear-monitoring",
    "metadata": {},
    "outputs": [],
@@ -105,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 70,
    "id": "abstract-magic",
    "metadata": {},
    "outputs": [],
@@ -115,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 71,
    "id": "incomplete-catch",
    "metadata": {},
    "outputs": [],
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 72,
    "id": "floppy-hearing",
    "metadata": {},
    "outputs": [],
@@ -152,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 73,
    "id": "visible-likelihood",
    "metadata": {},
    "outputs": [],
@@ -162,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 74,
    "id": "internal-chester",
    "metadata": {},
    "outputs": [],
@@ -181,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 75,
    "id": "meaningful-reminder",
    "metadata": {},
    "outputs": [],
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 76,
    "id": "palestinian-syntax",
    "metadata": {},
    "outputs": [],
@@ -210,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "mounted-aquatic",
    "metadata": {},
    "outputs": [],
@@ -236,12 +240,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 78,
    "id": "fatal-cooper",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_url_prod = driver.find_elements_by_css_selector(\"#products > ul > section > ul > li\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "understood-provincial",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"43398cb6-641f-4575-a672-00ae6275d10c\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"38335551-3e93-44b2-8e3a-ed5bd04d680b\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"58c280f7-cf3c-455f-b27c-eddd05766921\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"b1189bfa-dc02-4009-8792-9626cd7986fb\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"972adabe-32a2-469c-8477-503e6cc4a96c\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"790ba0db-1359-4615-8a8a-f668763ea5a0\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"d2ce11d7-421a-4cd8-9c00-7fa6b3a543c7\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"e544967a-c2a5-42bb-b706-5cc69d445ecf\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"dfa2e20b-156e-4d32-bd5e-a54a0b21dee8\")>]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_url_prod"
    ]
   },
   {
@@ -254,10 +287,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "vital-dress",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'url': 'https://www.zara.com/es/es/cazadora-cropped-acolchada-water-repellent-p03427741.html',\n",
+       "  'image': 'https://static.zara.net/photos///2021/V/0/1/p/3427/741/320/4/w/410/3427741320_1_1_1.jpg?ts=1613055576800',\n",
+       "  'product_name': 'CAZADORA CROPPED ACOLCHADA WATER REPELLENT',\n",
+       "  'price': '25,95 EUR'},\n",
+       " {'url': 'https://www.zara.com/es/es/chaleco-water-repellent-embolsable-p03427751.html',\n",
+       "  'image': 'https://static.zara.net/photos///2021/V/0/1/p/3427/751/320/2/w/410/3427751320_2_2_1.jpg?ts=1614953997230',\n",
+       "  'product_name': 'CHALECO WATER REPELLENT EMBOLSABLE',\n",
+       "  'price': '29,95 EUR'},\n",
+       " {'url': 'https://www.zara.com/es/es/sobrecamisa-estampada-bolsillos-p06895070.html',\n",
+       "  'image': 'https://static.zara.net/photos///2021/V/0/1/p/6895/070/305/2/w/410/6895070305_1_1_1.jpg?ts=1615209974640',\n",
+       "  'product_name': 'SOBRECAMISA ESTAMPADA BOLSILLOS',\n",
+       "  'price': '39,95 EUR'},\n",
+       " {'url': 'https://www.zara.com/es/es/chaqueta-bordada-abalorios-p05107060.html',\n",
+       "  'image': 'https://static.zara.net/photos///2021/V/0/1/p/5107/060/306/2/w/410/5107060306_1_1_1.jpg?ts=1615206401934',\n",
+       "  'product_name': 'CHAQUETA BORDADA ABALORIOS',\n",
+       "  'price': '39,95 EUR'},\n",
+       " {'url': 'https://www.zara.com/es/es/sobrecamisa-bolsillo-plastr%C3%B3n-p08891293.html',\n",
+       "  'image': 'https://static.zara.net/photos///2021/V/0/1/p/8891/293/300/2/w/410/8891293300_1_1_1.jpg?ts=1615211727445',\n",
+       "  'product_name': 'SOBRECAMISA BOLSILLO PLASTRÓN',\n",
+       "  'price': '39,95 EUR'},\n",
+       " {'url': 'https://www.zara.com/es/es/abrigo-largo-punto-p05755149.html',\n",
+       "  'image': 'https://static.zara.net/stdstatic/1.203.1-b.5/images/transparent-background.png',\n",
+       "  'product_name': 'ABRIGO LARGO PUNTO',\n",
+       "  'price': '39,95 EUR'},\n",
+       " {'url': 'https://www.zara.com/es/es/blazer-recta-bolsillos-p02010708.html',\n",
+       "  'image': 'https://static.zara.net/stdstatic/1.203.1-b.5/images/transparent-background.png',\n",
+       "  'product_name': 'BLAZER RECTA BOLSILLOS',\n",
+       "  'price': '49,95 EUR'},\n",
+       " {'url': 'https://www.zara.com/es/es/sudadera-acolchada-water-repellent-p05320706.html',\n",
+       "  'image': 'https://static.zara.net/stdstatic/1.203.1-b.5/images/transparent-background.png',\n",
+       "  'product_name': 'SUDADERA ACOLCHADA WATER REPELLENT',\n",
+       "  'price': '29,95 EUR'},\n",
+       " {'url': 'https://www.zara.com/es/es/chubasquero-crop-combinado-p04391733.html',\n",
+       "  'image': 'https://static.zara.net/stdstatic/1.203.1-b.5/images/transparent-background.png',\n",
+       "  'product_name': 'CHUBASQUERO CROP COMBINADO',\n",
+       "  'price': '25,95 EUR'}]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lst_dic_total_prod = []\n",
     "\n",
@@ -288,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 45,
    "id": "recent-stevens",
    "metadata": {
     "scrolled": true
@@ -309,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 46,
    "id": "connected-credit",
    "metadata": {},
    "outputs": [],
@@ -327,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 47,
    "id": "julian-soldier",
    "metadata": {
     "scrolled": false
@@ -336,10 +415,10 @@
     {
      "data": {
       "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"429c738d6ad08dd6ff61e38c9c817467\", element=\"fb0452de-e217-416c-acbb-7c841376fadb\")>"
+       "<selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"194b3d77-209b-4948-867f-648b95544d50\")>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 48,
    "id": "rough-david",
    "metadata": {},
    "outputs": [],
@@ -385,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 49,
    "id": "congressional-louisiana",
    "metadata": {
     "scrolled": true
@@ -394,11 +473,11 @@
     {
      "data": {
       "text/plain": [
-       "[<selenium.webdriver.remote.webelement.WebElement (session=\"429c738d6ad08dd6ff61e38c9c817467\", element=\"b0c00ae9-a84e-46dc-b716-a3e2cfe8800b\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"429c738d6ad08dd6ff61e38c9c817467\", element=\"0315f119-5a64-4e7b-bd24-52579bb9e87b\")>]"
+       "[<selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"efe24a5c-f6c9-4b5c-892a-d567e9df5b4f\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"624b3701f6e61ee46714bef3f09d32df\", element=\"ce7d1bca-2f1a-4cfa-9dfe-9fc4aef2f6db\")>]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 50,
    "id": "nasty-james",
    "metadata": {},
    "outputs": [
@@ -428,7 +507,7 @@
        "[' 3427/741', ' 320 Amarillo limón']"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 51,
    "id": "controlling-jesus",
    "metadata": {},
    "outputs": [
@@ -450,7 +529,7 @@
        "['3427741', '320']"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "id": "previous-brush",
    "metadata": {},
    "outputs": [],
@@ -531,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "id": "meaning-livestock",
    "metadata": {},
    "outputs": [
@@ -539,19 +618,18 @@
      "data": {
       "text/plain": [
        "[{'url': 'https://www.zara.com/es/es/blusa-crop-tie-dye-p00085048.html',\n",
-       "  'image': 'https://static.zara.net/photos///2021/V/0/1/p/0085/048/947/2/w/400/0085048947_1_1_1.jpg?ts=1614673261631',\n",
+       "  'image': 'https://static.zara.net/photos///2021/V/0/1/p/0085/048/947/2/w/410/0085048947_1_1_1.jpg?ts=1615206456459',\n",
        "  'product_name': 'BLUSA CROP TIE DYE',\n",
        "  'price': '25,95 EUR'}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Function testing\n",
-    "driver = webdriver.Chrome(\"./chromedriver\")\n",
     "info_products = get_features_products(\"blusa amarila\", driver)\n",
     "driver.close()\n",
     "info_products"
@@ -567,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "id": "creative-deficit",
    "metadata": {},
    "outputs": [],
@@ -605,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "id": "operating-career",
    "metadata": {},
    "outputs": [
@@ -615,14 +693,14 @@
        "['0085350', '561']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Function testing\n",
-    "driver = webdriver.Chrome(\"./chromedriver\")\n",
+    "driver = webdriver.Chrome(\"../chromedriver\")\n",
     "ids_product = get_prod_id(\"https://www.zara.com/es/es/camiseta-inicial-p00085350.html?v1=97283036&v2=1718817\", driver)\n",
     "driver.close()\n",
     "ids_product"
@@ -630,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "id": "bored-syndrome",
    "metadata": {},
    "outputs": [
@@ -640,14 +718,14 @@
        "['7901389', '712']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Function testing\n",
-    "driver = webdriver.Chrome(\"./chromedriver\")\n",
+    "driver = webdriver.Chrome(\"../chromedriver\")\n",
     "ids_product = get_prod_id(\"https://www.zara.com/es/es/vestido-seamless-p07901389.html?v1=89766478&v2=1719442\", driver)\n",
     "driver.close()\n",
     "ids_product"
@@ -663,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "id": "municipal-strip",
    "metadata": {},
    "outputs": [],
@@ -699,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "id": "younger-stage",
    "metadata": {
     "scrolled": true
@@ -715,14 +793,14 @@
        "  'ids_prod': ['0085048', '947']}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Function testing\n",
-    "driver = webdriver.Chrome(\"./chromedriver\")\n",
+    "driver = webdriver.Chrome(\"../chromedriver\")\n",
     "ids_p = get_products(\"blusa amarilla\",driver)\n",
     "driver.close()\n",
     "ids_p"
